tests/parser/parse-let.8.bad.error
error: Malformed declare
  --> test:5:28
   |
 5 |    (let ((declare x (T -> T) 5))
   |                              ^ unexpected form
